Add many things, like fetch, update form etc

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -4,9 +4,9 @@
   //text-align: center;
 
   .Footer {
-    display: none;
+    //display: none;
     width: 100%;
-    margin: auto;
+    margin: 20px auto;
     max-width: 800px;
 
     font: inherit;
