--- a/src/component/Form/Form.module.scss
+++ b/src/component/Form/Form.module.scss
@@ -13,7 +13,11 @@
     justify-content: center;
     padding-top: 20px;
 
-    button:nth-of-type(2n) {
+    /* button:nth-of-type(2n) {
+      margin-top: 10px;
+    } */
+
+    input {
       margin-top: 10px;
     }
   }
