--- a/src/component/FormElements/Checkbox/Checkbox.module.scss
+++ b/src/component/FormElements/Checkbox/Checkbox.module.scss
@@ -1,21 +1,6 @@
-$blue: rgb(41, 182, 246);
 
-.Wrapper {
-  /* width: 100%;
-  display: flex;
-  box-sizing: border-box;
-
-  margin-bottom: 12px;
-
-  font-size: 1rem;
-  font-weight: 400;
-  text-align: left;
-
-  line-height: 1;
-
-  letter-spacing: 0.009em;
- */
-  //width: 100%;
+/* .Wrapper {
+  
   box-sizing: border-box;
 
   padding-top: 5px;
@@ -29,6 +14,7 @@ $blue: rgb(41, 182, 246);
   line-height: 1;
 
   letter-spacing: 0.009em;
+
   .Label {
     padding: 0 0 0 10px;
 
@@ -37,7 +23,4 @@ $blue: rgb(41, 182, 246);
     color: rgba(0, 0, 0, 0.54);
   }
 
-  .Checkbox {
-    border: 1px solid red;
-  }
-}
+} */
