--- a/src/component/FormElements/Input/Input.module.scss
+++ b/src/component/FormElements/Input/Input.module.scss
@@ -1,4 +1,82 @@
-.InputWrapper {
+.BaseInputWrapper{
+  //width: 100%;
+  box-sizing: border-box;
+
+  margin-bottom: 12px;
+
+  cursor: pointer;
+
+  font-size: 1rem;
+  font-weight: 400;
+  text-align: left;
+
+  line-height: 1;
+
+  letter-spacing: 0.009em;
+}
+
+.Label {
+  padding: 0;
+
+  font-size: 0.95rem;
+
+  color: rgba(0, 0, 0, 0.54);
+}
+
+.BaseInput{
+    outline: none;
+
+    text-align: left;
+    color: black;
+
+    border-top: 0;
+    border-left: 0;
+    border-right: 0;
+    border-bottom: 1px solid #000000;
+    //border-radius: 7px;
+
+    background-color: white;
+    font: inherit;
+    padding: 6px 0 7px;
+    display: block;
+    width: 100%;
+    box-sizing: content-box;
+
+    &:focus {
+      outline: none;
+      //background-color: #fff7e5;
+      border-bottom: 2px solid rgb(178, 252, 255);
+    }
+}
+
+/* .Input--Focus{
+  &:focus {
+    outline: none;
+    //background-color: #fff7e5;
+    border-bottom: 2px solid rgb(178, 252, 255);
+  }
+} */
+
+.BaseInput--Error {
+  border-bottom: 2px solid red;
+
+  &:focus {
+    border-bottom: 2px solid red;
+  }
+}
+
+.Error {
+  color: red;
+  //padding-left: 8px;
+  padding-top: 5px;
+
+  font-size: 0.85rem;
+  font-weight: 400;
+}
+
+
+
+/* .InputWrapper {
   width: 100%;
   box-sizing: border-box;
 
@@ -43,7 +121,7 @@
     &:focus {
       outline: none;
       //background-color: #fff7e5;
-      border-bottom: 2px solid rgba(171, 252, 255, 0.514);
+      border-bottom: 2px solid rgb(178, 252, 255);
     }
   }
 
@@ -63,4 +141,4 @@
     font-size: 0.85rem;
     font-weight: 400;
   }
-}
+} */
