--- a/src/component/FormElements/Textarea/Textarea.module.scss
+++ b/src/component/FormElements/Textarea/Textarea.module.scss
@@ -1,4 +1,8 @@
-.TextareaWrapper{
+.Textarea{
+  resize: vertical;
+}
+
+/* .TextareaWrapper{
 
   width: 100%;
   box-sizing: border-box;
@@ -73,4 +77,4 @@
 
   }
 
-}
+} */
