--- a/src/component/TextRender/TextRender.module.scss
+++ b/src/component/TextRender/TextRender.module.scss
@@ -36,10 +36,11 @@
   }
 
   .Anchor {
-    text-decoration: underline double rgba(171, 255, 255, 0.849);
-    //text-decoration: none;
-    //border-bottom: 4px solid rgb(166, 255, 255);
-    color: black;
+    //text-decoration: underline double rgba(171, 255, 255, 0.849);
+    text-decoration: none;
+    //padding-bottom: -2px;
+    border-bottom: 2px solid rgba(166, 255, 255, 0.699);
+    color: inherit;
   }
 }
 
