--- a/src/component/UI/ImgWithLoading/ImgWithLoading.module.scss
+++ b/src/component/UI/ImgWithLoading/ImgWithLoading.module.scss
@@ -3,12 +3,6 @@
     width: 100%;
     height: 100%;
 
-    img{
-        //border-radius: 4px;
-        width: 100%;
-        height: 100%;
-    }
-
     .Spinner{
 
         position: absolute;
@@ -19,5 +13,27 @@
         height: 100%;
 
     }
+
+    .Error{
+
+        position: absolute;
+        top: 0;
+        left: 0;
+
+        width: 100%;
+        height: 100%;
+
+        padding-top: 10px;
+
+        text-align: center;
+
+    }
+
+
+    .Hidden{
+        visibility: hidden;
+    }
+
+
 
 }
