--- a/src/component/UI/Spinner/Spinner.module.scss
+++ b/src/component/UI/Spinner/Spinner.module.scss
@@ -7,11 +7,11 @@
   width: 100%;
   height: 100%;
 
- 
 
   .Loader {
-    color: rgba(172, 242, 255, 0.5);
-    font-size: 90px;
+    //color: rgba(172, 242, 255, 0.5);
+    color: rgba(0, 0, 0, 0.8);
+    font-size: 32px;
     text-indent: -9999em;
     overflow: hidden;
     width: 1em;
