Fixes and updates

--- a/src/component/Form/Form.module.scss
+++ b/src/component/Form/Form.module.scss
@@ -26,7 +26,7 @@
     min-height: 18px;
 
     .FormError {
-      //padding: 10px;
+      padding-top: 20px;
       color: rgba(255, 31, 31, 0.685);
       text-align: justify;
       text-indent: 12px;
@@ -37,7 +37,7 @@
     }
 
     .FormMessage {
-      //padding: 10px;
+      padding-top: 20px;
       color: rgba(160, 255, 104, 0.788);
       text-align: justify;
       text-indent: 12px;
