--- a/src/component/FormElements/Checkbox/Checkbox.module.scss
+++ b/src/component/FormElements/Checkbox/Checkbox.module.scss
@@ -1,4 +1,13 @@
+.Wrapper{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 7px;
+}
 
+.Checkbox{
+  margin-left: 20px;
+}
 /* .Wrapper {
   
   box-sizing: border-box;
