--- a/src/component/FormElements/Input/Input.module.scss
+++ b/src/component/FormElements/Input/Input.module.scss
@@ -39,7 +39,7 @@
     font: inherit;
     padding: 6px 0 7px;
     display: block;
-    width: 100%;
+    //width: 100%;
     box-sizing: content-box;
 
     &:focus {
